--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" type="image/jpg" href="assets/img/cu-gold.png"/>
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css"  href="assets/css/styles.css">
         <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
                 <title>Caroline Urdanivia | DEV</title>
@@ -44,13 +45,7 @@
                     <div class="home__container bd-grid">
                         <div class="home__img">
                             <img src="assets/img/cu-main.png" alt="" data-speed="-2" class="">
-                            <!-- <img src="assets/img/img2.png" alt="" data-speed="2" class="move">
-                            <img src="assets/img/img3.png" alt="" data-speed="2" class="move">
-                            <img src="assets/img/img4.png" alt="" data-speed="-2" class="move">
-                            <img src="assets/img/img5.png" alt="" data-speed="-2" class="move">
-                            <img src="assets/img/img6.png" alt="" data-speed="2" class="move"> -->
                         </div>
-
                         <div class="home__data">
                             <h1 class="home__title">Caroline<br>Urdanivia</h1>
                             <p class="home__description">Freelance Web Developer & Designer</p>
