Updated images and content. Redesigned contact foform.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="services__data">
             <i class='bx bx-laptop services__icon'></i>
             <h3 class="services__title">Web Development</h3>
-            <p class="services__description">Freelance experience in coding and designing mobile-first and responsive websites for small business clients utilizing HTML5, CSS3, Javascript, jQuery, XML, JSON, Git, and Git Hub..</p>
+            <p class="services__description">Freelance experience in coding and designing mobile-first and responsive websites for small business clients utilizing HTML5, CSS3, Javascript, jQuery, XML, JSON, Git, and Git Hub.</p>
           </div>
         </div>
       </section>
@@ -112,7 +112,7 @@
             <a href="#"><img src="assets/img/rsp.jpg" alt="John Ricoh Suave | Professional Photographer" class="portfolio__img"></a>
             <div class="portfolio__data">
               <span class="portfolio__subtitle">Web Development & Design</span>
-              <p class="portfolio__title">Client website built with HTML5, CSS3, and JavaScript. Designed mobile-first/responsive mockups and helped with ftp, hosting and email setup.</p>
+              <p class="portfolio__title">Client website built with HTML5, CSS3, and JavaScript. Designed mobile-first and responsive mockups and helped with ftp, hosting and email setup.</p>
               <a href="https://www.ricohsuavephotography.com/" target="_blank" class="button button-link">VISIT SITE</a>
             </div>
           </div>
@@ -121,7 +121,7 @@
             <a href="#"><img src="assets/img/AMK.jpg" alt="Andre Kareem Mathieu | UX Designer" class="portfolio__img"></a>
             <div class="portfolio__data">
               <span class="portfolio__subtitle">Web Development & Design</span>
-              <p class="portfolio__title">Client website built with HTML5, CSS3, and JavaScript. Designed mobile-first/responsive mockups and helped client with affordable hosting on GitHub.</p>
+              <p class="portfolio__title">Client website built with HTML5, CSS3, and JavaScript. Designed mobile-first and responsive mockups and helped client with affordable hosting on Git Hub.</p>
               <a href="https://csumie.github.io/AKM-Portfolio/" target="_blank" class="button button-link">VISIT SITE</a>
             </div>
           </div>
@@ -130,7 +130,7 @@
             <a href="#"><img src="assets/img/PF.jpg" alt="Pawsome Facts | Cat Facts" class="portfolio__img"></a>
             <div class="portfolio__data">
               <span class="portfolio__subtitle">Web Development & Design</span>
-              <p class="portfolio__title">Project website built using HTML5, CSS3, and JavaScript applying dark mode using light-colored text and other UI elements. Project currently hosted on GitHub.</p>
+              <p class="portfolio__title">Project website built using HTML5, CSS3, and JavaScript applying dark mode using light-colored text and other UI elements. Project currently hosted on Git Hub.</p>
               <a href="https://csumie.github.io/pawesome-facts-responsive-layout/" target="_blank" class="button button-link">VISIT SITE</a>
             </div>
           </div>
@@ -140,7 +140,7 @@
             <div class="portfolio__data">
               <span class="portfolio__subtitle">Squarespace</span>
               <p class="portfolio__title">Client website created on a collaborative effort, maintaining social presence and digital storefront.</p>
-              < <a href="https://mattycarterandariel.com/" target="_blank" class="button button-link">VISIT SITE</a>
+              <a href="https://mattycarterandariel.com/" target="_blank" class="button button-link">VISIT SITE</a>
             </div>
           </div>
 
@@ -198,7 +198,7 @@
 
       <!--===== CONTACT =====-->
       <section class="contact bd-container section" id="contact">
-        <h2 class="section-title">Wanna collaborate?<br>Let's link up.</h2>
+        <h2 class="section-title">CONTACT</h2>
         <div class="cognito">
           <script src="https://www.cognitoforms.com/s/ZqNuX11PTEmLYLWD4pIEUQ"></script>
           <script>
