--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="about__container">
           <div class="about__data">
-            <p class="about__description">Seventeen years of experience working in photography, digital design, e-commerce, and front-end web development. My vast knowledge has allowed me to work with companies and clients and contribute as a liaison, communicating processes needed to produce and publish content successfully. I am always up to learning a new skill set and adding to my experience and currently learning UI/UX and working on applying concepts to current and future projects. The goal is to find a creative collective where my experiences can be appreciated and utilized to create incredible design and development—always looking to collaborate with innovative and like-minded folks who share the same passion for clean code and design!</p>
+            <p class="about__description">Seventeen years of experience working in digital photography, digital design, e-commerce, and front-end web development. My vast knowledge has allowed me to work with companies and clients and contribute as a liaison, communicating processes needed to produce and publish content successfully. I am always up to learning a new skill set and adding to my experience and currently learning UI/UX and working on applying concepts to current and future projects. The goal is to find a creative collective where my experiences can be appreciated and utilized to create incredible design and development—always looking to collaborate with innovative and like-minded folks who share the same passion for clean code and design!</p>
           </div>
         </div>
       </section>
