Updated project and nav bar

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li class="nav__item"><a href="#home" class="nav__link active-link">HOME</a></li>
             <li class="nav__item"><a href="#about" class="nav__link">ABOUT</a></li>
             <li class="nav__item"><a href="#services" class="nav__link">SKILLS</a></li>
-            <li class="nav__item"><a href="#portfolio" class="nav__link">PROJECTS</a></li>
+            <li class="nav__item"><a href="#portfolio" class="nav__link">PORTFOLIO</a></li>
             <li class="nav__item"><a href="#contact" class="nav__link">CONTACT</a></li>
           </ul>
         </div>
@@ -136,7 +136,7 @@
           </div>
 
           <div class="portfolio__content mix ux">
-            <a href="#"><img src="assets/img/mca.jpg" alt="" class="portfolio__img"></a>
+            <a href="#"><img src="assets/img/mca.jpg" alt="Matty Carter + Ariel" class="portfolio__img"></a>
             <div class="portfolio__data">
               <span class="portfolio__subtitle">Squarespace</span>
               <p class="portfolio__title">Client website created on a collaborative effort, maintaining social presence and digital storefront.</p>
@@ -145,11 +145,11 @@
           </div>
 
           <div class="portfolio__content mix app">
-            <a href="#"><img src="assets/img/eagelRock.jpg" alt="" class="portfolio__img"></a>
+            <a href="#"><img src="assets/img/FBR.jpg" alt="Flat Rock Brook Park" class="portfolio__img"></a>
             <div class="portfolio__data">
               <span class="portfolio__subtitle">Squarespace</span>
               <p class="portfolio__title">Client website created on a collaborative effort, maintaining social media and community presence.</p>
-              <a href="https://www.essexcountyparks.org/" target="_blank" class="button button-link">VISIT SITE</a>
+              <a href="https://www.flatrockbrook.org/" target="_blank" class="button button-link">VISIT SITE</a>
             </div>
           </div>
 
